Fixed nav bar on mobile

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -40,16 +40,7 @@ $nav-padding: 1px 0
 
     @media #{$mobile}
         > .list
-            display: flex
-            flex-direction: column
-            justify-content: center
-            align-items: center
-            padding: 8px 0
-
-        > .item
-            margin: 0
+            font-size: 1.8rem
 
         > .item > .link
             font-size: 1.8rem
-            padding: 15px 8px
-            text-align: center
